# agar-bot-pg

./: .gitignore  readme.md
environment/: CMakeLists.txt
environment/include/client/: Client.h
environment/include/collisions/: BruteForce.h
environment/include/core/: ACollidable.h  AMassContaining.h  EntityType.h  GameInput.h  GameState.h  Hit.h  ICollidable.h  ICollisionChecker.h  IDrawable.h  IPrintable.h  ISerializable.h  Logging.h  PacketBuffer.h  Packets.h  Player.h  Simulator.h  Timer.h  macros.h
environment/include/math/: math.h
environment/include/server/: Server.h
environment/include/state/: BlobState.h  FoodPelletState.h  PlayerState.h
environment/src/: main.cpp
environment/src/client/: Client.cpp
environment/src/core/: AMassContaining.cpp  GameInput.cpp  GameState.cpp  Logging.cpp  Simulator.cpp
environment/src/server/: Server.cpp
environment/src/state/: BlobState.cpp  FoodPelletState.cpp  PlayerState.cpp
environment/src/test/: math_tests.cc  serialization_tests.cc
